# VoiceAgent

./: Deployment.md  dockercompose.yml  main.py  pyproject.toml
backend/: Dockerfile  config.py  main.py  pyproject.toml
backend/app/: bot.py  config.py  database.py
backend/app/models/: document.py
backend/app/routers/: equipment.py  stream.py
backend/app/services/: rag.py
backend/models/: document.py
frontend/: package-lock.json  vite.config.ts
frontend/src/components/: RealTimeChatPanel.tsx
frontend/src/hooks/: pipecat-chat-events.ts
