[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "daily>=0.2.1",
    "docx>=0.2.4",
    "fastapi[standard]>=0.110.3",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langchain-text-splitters>=1.1.1",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "pipecat>=0.3.0",
    "pipecat-ai[deepgram,elevenlabs,groq]>=0.0.104",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "pypdf>=6.7.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
]
